Small fixes in bedstead.
Test: btest android.multiuser.cts.UserManagerTest

Fixes: 283021493
Bug: 280585594
Change-Id: I1c06d62169e287cce6385239463fd833a309e485